testando rotinas